format fonts for tablet and mobile page and section headers

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -98,6 +98,24 @@ ul, a, a:link, a:visited {
   font-family: "AvenirNextBold", sans-serif;
 }
 
+@media (min-width: 768px) {
+  .page-header {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #fff;
+    font-family: "AvenirNext", sans-serif;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .section-header {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #fff;
+    font-family: "AvenirNextBold", sans-serif;
+  }
+}
 .hero, .about, .photogallery {
   margin-top: 0;
   padding-top: 0;
