--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -38,7 +38,7 @@ ul,a,a:link, a:visited{
 }}
 .navbar{&-list{&__item{
     text-align: center;
-    width: 33%;
+    width: 50%;
     
 }}}
 .navbar{&-list{&__title{
@@ -62,6 +62,7 @@ ul,a,a:link, a:visited{
         display: flex;
         justify-content: center;
         padding:0 36px;
+        width: 33%;
     }}}
     .navbar{&-list{&__title{
         display: flex;
@@ -292,20 +293,43 @@ ul,a,a:link, a:visited{
         line-height:$mobile-footercopy--lineheight;
         font-weight: $mobile-footercopy--textweight;
 }}}
+.blah{
+    // padding:16px;
+    background-color: $navbar-color;
+    padding: 16px;
+}
 @include tablet{
-    .footer{&-list1{
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        // margin: 36px;
-        // position: relative;
-    }}
+    .blah{
+        // padding:16px;
+        background-color: $navbar-color;
+        // padding: 36px;
+        // width: 100%;
+        // height: auto;
+    }
     .footer-header{
         display: flex;
         justify-content: space-between;
         align-items: center ;
+        background-color: $navbar-color;
+        margin: 36px;
+        
         // width: 100%;
     }
+    .footer__title,.page-subheader{
+        font-size: $desktop-footercopy--size;
+        line-height:$desktop-footercopy--lineheight;
+        font-weight: $desktop-footercopy--textweight;
+        color: #fff;
+    }
+    .footer{&-list1{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        // width: 33%;
+        
+        // margin: 36px;
+        // position: relative;
+    }}
     .footer-list--no-mobile{
         display: flex;
         // justify-content: flex-end;
@@ -315,43 +339,90 @@ ul,a,a:link, a:visited{
         
         // text-align: right;
     }
-    .footer{&-container{
-        // padding:16px;
-        background-color: $navbar-color;
-        display: inline-block;
-        // width: 100%;
-        // height: auto;
-        // padding: 36px;
-    }}
+    
+    
+    // .footer{&-container{
+    //     // padding:16px;
+    //     background-color: $navbar-color;
+    //     display: inline-block;
+    //     // width: 100%;
+    //     // height: auto;
+    //     padding: 36px;
+    // }}
     .footer{&-list{
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-between;
         text-align: left;
         flex-wrap: nowrap;
+        align-items: center;
+        background-color: $navbar-color;
+        width: auto;
+        height: 100%;
+
     }}
     .footer{&-list{&__item{
         line-height: 2;
         // padding: 16px 0;
         color: #fff;
-        font-size: $desktop-footercopy--size;
+        font-size: 10px;
         line-height:$desktop-footercopy--lineheight;
         font-weight: $desktop-footercopy--textweight;
         align-items: center;
+        flex-wrap: nowrap;
+        margin: 0 36px;
+        
     }}}
     .footer{
         // padding:16px;
         background-color: $navbar-color;
         display: flex;
-        width: 100%;
+        // padding:16px;
+        // background-color: $navbar-color;
+        // display: inline-block;
+        // width: 100%;
+        // height: auto;
+        // padding: 36px;
+        // width: 100%;
+    }
+    
+    .footer-list__socials{
+         margin: 0 108px;
+    }
+    .subtitle__icon{
+        padding: 0 16px;
     }
     .page1{&-header{
         display: none;
     }}
+    .subtitle,.subtitle1{
+        margin-bottom:36px;
+    }
+    .subtitle1{
+        font-weight: 700;
+    }
     .subtitle{
-        margin:36px 0;
+        font-weight: 300;
+    }
+    // .footer__title{
+    //     margin:36px;
+    // }
+    .page-subheader{
+        margin: 0 36px;
     }
 
+}
+
+@include desktop{
+    .footer{&-list{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        text-align: left;
+        flex-wrap: nowrap;
+        align-items: center;
+        background-color: $navbar-color;
+    }}
 }
 
 
